# FHE-Table-Search

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.sh
.github/workflows/: config.yml
demo/: CMakeLists.txt
demo/cs/: CMakeLists.txt  main.cpp
demo/dec/: CMakeLists.txt  main.cpp
demo/share/: define.hpp
demo/user/: CMakeLists.txt  main.cpp
doc/spec-ja/: ChangeLog  README.md
doc/spec-ja/source/: 01_intro.md  02_system_overview.md  03_system_detail.md  04_appendix.md  conf.py  history.md  index.rst
doc/spec-ja/source/images/: fhetbl_design.drawio
fts/: CMakeLists.txt
fts/fts_cs/: CMakeLists.txt  fts_cs_calcmanager.cpp  fts_cs_calcmanager.hpp  fts_cs_calcthread.cpp  fts_cs_calcthread.hpp  fts_cs_callback_function.cpp  fts_cs_callback_function.hpp  fts_cs_callback_param.cpp  fts_cs_callback_param.hpp  fts_cs_dec_client.cpp  fts_cs_dec_client.hpp  fts_cs_lut.cpp  fts_cs_lut.hpp  fts_cs_query.cpp  fts_cs_query.hpp  fts_cs_result.cpp  fts_cs_result.hpp  fts_cs_srv.cpp  fts_cs_srv.hpp  fts_cs_state.cpp  fts_cs_state.hpp
fts/fts_dec/: CMakeLists.txt  fts_dec_callback_function.cpp  fts_dec_callback_function.hpp  fts_dec_callback_param.cpp  fts_dec_callback_param.hpp  fts_dec_keycontainer.cpp  fts_dec_keycontainer.hpp  fts_dec_srv.cpp  fts_dec_srv.hpp  fts_dec_state.cpp  fts_dec_state.hpp
fts/fts_share/: CMakeLists.txt  fts_basicdata.hpp  fts_commonparam.hpp  fts_concurrent_mapqueue.hpp  fts_config.cpp  fts_config.hpp  fts_context.hpp  fts_cs2decparam.cpp  fts_cs2decparam.hpp  fts_cs2userparam.cpp  fts_cs2userparam.hpp  fts_dec2csparam.cpp  fts_dec2csparam.hpp  fts_define.hpp  fts_encdata.cpp  fts_encdata.hpp  fts_funcno.hpp  fts_packet.hpp  fts_plaindata.hpp  fts_seal_utility.cpp  fts_seal_utility.hpp  fts_user2csparam.cpp  fts_user2csparam.hpp  fts_user2decparam.cpp  fts_user2decparam.hpp  fts_utility.cpp  fts_utility.hpp
fts/fts_user/: CMakeLists.txt  fts_user.hpp  fts_user_cs_client.cpp  fts_user_cs_client.hpp  fts_user_dec_client.cpp  fts_user_dec_client.hpp  fts_user_result_cbfunc.hpp  fts_user_result_thread.cpp  fts_user_result_thread.hpp
one-input/: CMakeLists.txt  demo-cs1.cpp  demo-cs2.cpp  demo-ds2.cpp  demo-in.cpp  demo-out.cpp  make_table.cpp  server.hpp
test/: config.txt  run_one.sh  run_two.sh  test_one.csv  test_one.sh  test_two.csv  test_two.sh
test/sample_LUT/: make_sample_lut_one.py  make_sample_lut_two.py  make_samples.sh  sample_lut_one.csv  sample_lut_two.csv
two-input/: CMakeLists.txt  demo-ds1.cpp  demo-out.cpp  demo-two-cs1.cpp  demo-two-cs2.cpp  demo-two-ds2.cpp  demo-two-in.cpp  make_table.cpp  server.hpp
